# DS-and-ALG

./: README.md
lab1/: CMakeLists.txt  build.bash
lab1/src/: main.c  matrix.c
lab1/src/include/: matrix.c  matrix.h
lab2/: .gitignore  CMakeLists.txt
lab2/src/: airport.c  main.c  queue.c
lab2/src/include/: airport.c  airport.h  input.c  input.h  queue.c  queue.h
lab3/a/: .gitignore  CMakeLists.txt
lab3/a/src/: dialog.c  main.c  table.c  utils.c
lab3/a/src/include/: dialog.c  dialog.h  table.c  table.h  types.h  utils.c  utils.h
lab3/b/: CMakeLists.txt  filestruct.md
lab3/b/src/: dialog.c  files.c  main.c  table.c  utils.c
lab3/b/src/include/: dialog.c  dialog.h  files.h  table.c  table.h  utils.c  utils.h
lab3/c/: CMakeLists.txt
lab3/c/src/: dialog.c  main.c  table.c  utils.c
lab3/c/src/include/: dialog.h  table.h  types.h  utils.c  utils.h
lab3/d/: .gitignore
lab3/d/src/: dialog.c  main.c  table.c  utils.c
lab3/d/src/include/: dialog.h  table.h  types.h  utils.h
lab4/a/: .gitignore  CMakeLists.txt  timing.py
lab4/a/src/: dialog.c  main.c  tree.c  utils.c
lab4/a/src/include/: dialog.h  tree.c  tree.h  types.h  utils.h
lab4/b/: .gitignore  CMakeLists.txt  timing.py
lab4/b/src/: dialog.c  llrb_tree.c  main.c  utils.c
lab4/b/src/include/: dialog.h  llrb_tree.h  utils.h
lab5/: CMakeLists.txt
lab5/src/: dialog.c  graph.c  list.c  main.c  priority_queue.c  queue.c  utils.c
lab5/src/include/: dialog.h  graph.h  list.h  priority_queue.h  queue.h  utils.h
